@@ -1,3 +1,10 @@
+Tue Jun  8 14:29:01 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
+
+        * DnC/RepositoryManager/RepositoryManager_Impl.cpp:
+
+          Made changes to read the top level package URL
+          and create the PackageConfiguration IDL data structure.
+
 Tue Jun  8 14:15:31 2004  Gan Deng  <dengg@dre.vanderbilt.edu>
 
 	* DnC/Config_Handlers/Utils.h:
